# com-management/backend/src/server.ts
@@ -21,6 +21,8 @@ import eventsSchemaRoutes from './routes/eventsSchema';
 import searchRoutes from './routes/search';
 import overridesRoutes from './routes/overrides';
 import brokerRoutes from './routes/broker';
+import deviceRoutes from './routes/devices';
+import snmpAccessRoutes from './routes/snmpAccess';
 import mibRoutes from './routes/mibs';
 import overviewRoutes from './routes/overview';
 import microserviceRoutes from './routes/microservice';
@@ -98,6 +100,8 @@ app.use('/api/v1/events/schema', eventsSchemaRoutes);
 app.use('/api/v1/search', searchRoutes);
 app.use('/api/v1/overrides', overridesRoutes);
 app.use('/api/v1/broker', brokerRoutes);
+app.use('/api/v1/devices', deviceRoutes);
+app.use('/api/v1/snmp-access', snmpAccessRoutes);
 app.use('/api/v1/mibs', mibRoutes);
 app.use('/api/v1/overview', overviewRoutes);
 app.use('/api/v1/microservice', microserviceRoutes);
